--- a/_data/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json
+++ b/_data/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json
@@ -30,6 +30,12 @@
             "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/clip.json",
             "label": "Clip"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/clip_range.json",
+            "label": "clip_range"
+          }
         ],
         "items": [
           {
