Updated R_0124_01_01 "Criminal Syndicalism" case, McComb, Mississippi

--- a/_data/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json
+++ b/_data/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json
@@ -23,6 +23,14 @@
         "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas",
         "type": "Canvas",
         "duration": 1005.0,
+        "annotations": [
+          
+          {
+            "type": "AnnotationPage",
+            "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/clip.json",
+            "label": "clip"
+          }
+        ],
         "items": [
           {
             "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/paintings",
