--- a/_data/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json
+++ b/_data/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http://iiif.io/api/presentation/3/context.json",
-    "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json",
+    "id": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/manifest.json",
     "type": "Manifest",
     "label": { "en": [ "R_0124_01_01 \"Criminal Syndicalism\" case, McComb, Mississippi" ] },
     "homepage": [
@@ -20,30 +20,36 @@
     ],
     "items": [
       {
-        "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas",
+        "id": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas",
         "type": "Canvas",
         "duration": 1005.0,
         "annotations": [
           
           {
             "type": "AnnotationPage",
-            "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/clip.json",
+            "id": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/clip.json",
             "label": "clip"
           }
           ,
           {
             "type": "AnnotationPage",
-            "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/class_annotations.json",
+            "id": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/test.json",
+            "label": "test"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas/class_annotations.json",
             "label": "class_annotations"
           }
         ],
         "items": [
           {
-            "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/paintings",
+            "id": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/paintings",
             "type": "AnnotationPage",
             "items": [
               {
-                "id": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/painting",
+                "id": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/painting",
                 "type": "Annotation",
                 "motivation": "painting",
                 "body": {
@@ -52,7 +58,7 @@
                   "format": "audio/mp3",
                     "duration": 1005.0
                 },
-                "target": "https://bethanycayeradcliff.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas"
+                "target": "https://sounding-off.github.io/audiannotate-hrc-lesson/r_0124_01_01-criminal-syndicalism-case-mccomb-mississippi/canvas-1/canvas"
               }
             ]
           }
